# annoying-web

./: .pre-commit-config.yaml  README.md  pyproject.toml
cookie/: README.md  cookie.py
